{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 407,
  "lineage": "8eb80b4a-36f4-146e-f8a6-77408fc7e92c",
  "resources": [
    {
      "module": "module.network.module.db_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:security-group/sg-04daf8f436c9bf499",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04daf8f436c9bf499",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027576afa40536ebf"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20220804170225489000000006",
            "name_prefix": "terraform-",
            "owner_id": "323378118206",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.lb_sg.aws_security_group.security_group",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.websvr_sg.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:security-group/sg-0fe397347d5ecc33f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe397347d5ecc33f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20220804170218270500000004",
            "name_prefix": "terraform-",
            "owner_id": "323378118206",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07aa31bdb055354da",
            "association_id": "eipassoc-01cd9b8104f6fdda3",
            "domain": "vpc",
            "id": "eipalloc-07aa31bdb055354da",
            "network_border_group": "us-east-1",
            "network_interface": "eni-035a5e2fc850d24e6",
            "private_dns": "ip-10-0-101-245.ec2.internal",
            "private_ip": "10.0.101.245",
            "public_dns": "ec2-34-198-128-193.compute-1.amazonaws.com",
            "public_ip": "34.198.128.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "drupaldemo-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:internet-gateway/igw-024c190b1f42eede7",
            "id": "igw-024c190b1f42eede7",
            "owner_id": "323378118206",
            "tags": {
              "Name": "drupaldemo-vpc"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc"
            },
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07aa31bdb055354da",
            "connectivity_type": "public",
            "id": "nat-02738fb54b6b51554",
            "network_interface_id": "eni-035a5e2fc850d24e6",
            "private_ip": "10.0.101.245",
            "public_ip": "34.198.128.193",
            "subnet_id": "subnet-0fa9c731ed72b2458",
            "tags": {
              "Name": "drupaldemo-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dd285202cd5db7871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02738fb54b6b51554",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd285202cd5db787",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-024c190b1f42eede7",
            "id": "r-rtb-06e5895e7d95877241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e5895e7d9587724",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:route-table/rtb-0dd285202cd5db787",
            "id": "rtb-0dd285202cd5db787",
            "owner_id": "323378118206",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02738fb54b6b51554",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "drupaldemo-vpc-private"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:route-table/rtb-06e5895e7d9587724",
            "id": "rtb-06e5895e7d9587724",
            "owner_id": "323378118206",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024c190b1f42eede7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "drupaldemo-vpc-public"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0400bdf6a8c4b999a",
            "route_table_id": "rtb-0dd285202cd5db787",
            "subnet_id": "subnet-0a72b706b013f19d2"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b904df9212e2f783",
            "route_table_id": "rtb-0dd285202cd5db787",
            "subnet_id": "subnet-0d724125079d1751f"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064edb8063ccc18f6",
            "route_table_id": "rtb-0dd285202cd5db787",
            "subnet_id": "subnet-0ac5402741f425ead"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf6d9c090581ecd3",
            "route_table_id": "rtb-0dd285202cd5db787",
            "subnet_id": "subnet-08e721d3e9727dab8"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043602bab3d802ea6",
            "route_table_id": "rtb-0dd285202cd5db787",
            "subnet_id": "subnet-08faa06458d5978a9"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0792b7ab701b523d3",
            "route_table_id": "rtb-0dd285202cd5db787",
            "subnet_id": "subnet-0e0d1f059d58eec88"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b7cf24cc36a4e5c",
            "route_table_id": "rtb-06e5895e7d9587724",
            "subnet_id": "subnet-0fa9c731ed72b2458"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09161f57805ac79c8",
            "route_table_id": "rtb-06e5895e7d9587724",
            "subnet_id": "subnet-06cd09a1c487d2098"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d372498442ef26cb",
            "route_table_id": "rtb-06e5895e7d9587724",
            "subnet_id": "subnet-0d63b3d19779cb3c7"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:subnet/subnet-0a72b706b013f19d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a72b706b013f19d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323378118206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "drupaldemo-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:subnet/subnet-0d724125079d1751f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d724125079d1751f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323378118206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "drupaldemo-vpc-db-us-east-1b"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-db-us-east-1b"
            },
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:subnet/subnet-0ac5402741f425ead",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac5402741f425ead",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323378118206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "drupaldemo-vpc-db-us-east-1c"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-db-us-east-1c"
            },
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:subnet/subnet-08e721d3e9727dab8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e721d3e9727dab8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323378118206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "drupaldemo-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:subnet/subnet-08faa06458d5978a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08faa06458d5978a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323378118206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "drupaldemo-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:subnet/subnet-0e0d1f059d58eec88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0d1f059d58eec88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323378118206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "drupaldemo-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:subnet/subnet-0fa9c731ed72b2458",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa9c731ed72b2458",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323378118206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "drupaldemo-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:subnet/subnet-06cd09a1c487d2098",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cd09a1c487d2098",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323378118206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "drupaldemo-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:subnet/subnet-0d63b3d19779cb3c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d63b3d19779cb3c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323378118206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "drupaldemo-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:vpc/vpc-01e7b93d21005e561",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-043b210c5cf272f65",
            "default_route_table_id": "rtb-0c76906fb029bcd87",
            "default_security_group_id": "sg-051a31e50bc723898",
            "dhcp_options_id": "dopt-06643021fce4a26a4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01e7b93d21005e561",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c76906fb029bcd87",
            "owner_id": "323378118206",
            "tags": {
              "Name": "drupaldemo-vpc"
            },
            "tags_all": {
              "Name": "drupaldemo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.websvr_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323378118206:security-group/sg-027576afa40536ebf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027576afa40536ebf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe397347d5ecc33f"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20220804170221801000000005",
            "name_prefix": "terraform-",
            "owner_id": "323378118206",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.lb_sg.aws_security_group.security_group",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323378118206:loadbalancer/app/drupaldemo/ced620d2641ef232",
            "arn_suffix": "app/drupaldemo/ced620d2641ef232",
            "desync_mitigation_mode": "defensive",
            "dns_name": "drupaldemo-1032111072.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:323378118206:loadbalancer/app/drupaldemo/ced620d2641ef232",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "drupaldemo",
            "security_groups": [
              "sg-0fe397347d5ecc33f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06cd09a1c487d2098"
              },
              {
                "subnet_id": "subnet-0d63b3d19779cb3c7"
              },
              {
                "subnet_id": "subnet-0fa9c731ed72b2458"
              }
            ],
            "subnets": [
              "subnet-06cd09a1c487d2098",
              "subnet-0d63b3d19779cb3c7",
              "subnet-0fa9c731ed72b2458"
            ],
            "tags": {
              "Name": "drupaldemo"
            },
            "tags_all": {
              "Name": "drupaldemo"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-01e7b93d21005e561",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.db_sg.aws_security_group.security_group",
            "module.network.module.lb_sg.aws_security_group.security_group",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.network.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.network.module.vpc.aws_vpc_endpoint.apigw",
            "module.network.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.network.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.network.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.network.module.vpc.aws_vpc_endpoint.athena",
            "module.network.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.network.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.network.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.network.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.network.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.network.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.network.module.vpc.aws_vpc_endpoint.codebuild",
            "module.network.module.vpc.aws_vpc_endpoint.codecommit",
            "module.network.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.network.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.network.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.network.module.vpc.aws_vpc_endpoint.config",
            "module.network.module.vpc.aws_vpc_endpoint.datasync",
            "module.network.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.network.module.vpc.aws_vpc_endpoint.ebs",
            "module.network.module.vpc.aws_vpc_endpoint.ec2",
            "module.network.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.network.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.network.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.network.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.network.module.vpc.aws_vpc_endpoint.ecs",
            "module.network.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.network.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.network.module.vpc.aws_vpc_endpoint.efs",
            "module.network.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.network.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.network.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.network.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.network.module.vpc.aws_vpc_endpoint.emr",
            "module.network.module.vpc.aws_vpc_endpoint.events",
            "module.network.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.network.module.vpc.aws_vpc_endpoint.glue",
            "module.network.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.network.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.network.module.vpc.aws_vpc_endpoint.kms",
            "module.network.module.vpc.aws_vpc_endpoint.lambda",
            "module.network.module.vpc.aws_vpc_endpoint.logs",
            "module.network.module.vpc.aws_vpc_endpoint.monitoring",
            "module.network.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.network.module.vpc.aws_vpc_endpoint.rds",
            "module.network.module.vpc.aws_vpc_endpoint.rekognition",
            "module.network.module.vpc.aws_vpc_endpoint.s3",
            "module.network.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.network.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.network.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.network.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.network.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.network.module.vpc.aws_vpc_endpoint.ses",
            "module.network.module.vpc.aws_vpc_endpoint.sms",
            "module.network.module.vpc.aws_vpc_endpoint.sns",
            "module.network.module.vpc.aws_vpc_endpoint.sqs",
            "module.network.module.vpc.aws_vpc_endpoint.ssm",
            "module.network.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.network.module.vpc.aws_vpc_endpoint.states",
            "module.network.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.network.module.vpc.aws_vpc_endpoint.sts",
            "module.network.module.vpc.aws_vpc_endpoint.textract",
            "module.network.module.vpc.aws_vpc_endpoint.transfer",
            "module.network.module.vpc.aws_vpc_endpoint.transferserver",
            "module.network.module.vpc.aws_vpc_endpoint.workspaces",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.network.module.websvr_sg.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.webserver.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323378118206:targetgroup/websvr20220804170649574800000007/96b84b1b4110b9ad",
            "arn_suffix": "targetgroup/websvr20220804170649574800000007/96b84b1b4110b9ad",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323378118206:targetgroup/websvr20220804170649574800000007/96b84b1b4110b9ad",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "websvr20220804170649574800000007",
            "name_prefix": "websvr",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "websvr"
            },
            "tags_all": {
              "Name": "websvr"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01e7b93d21005e561"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.db_sg.aws_security_group.security_group",
            "module.network.module.lb_sg.aws_security_group.security_group",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.network.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.network.module.vpc.aws_vpc_endpoint.apigw",
            "module.network.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.network.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.network.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.network.module.vpc.aws_vpc_endpoint.athena",
            "module.network.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.network.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.network.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.network.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.network.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.network.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.network.module.vpc.aws_vpc_endpoint.codebuild",
            "module.network.module.vpc.aws_vpc_endpoint.codecommit",
            "module.network.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.network.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.network.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.network.module.vpc.aws_vpc_endpoint.config",
            "module.network.module.vpc.aws_vpc_endpoint.datasync",
            "module.network.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.network.module.vpc.aws_vpc_endpoint.ebs",
            "module.network.module.vpc.aws_vpc_endpoint.ec2",
            "module.network.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.network.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.network.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.network.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.network.module.vpc.aws_vpc_endpoint.ecs",
            "module.network.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.network.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.network.module.vpc.aws_vpc_endpoint.efs",
            "module.network.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.network.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.network.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.network.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.network.module.vpc.aws_vpc_endpoint.emr",
            "module.network.module.vpc.aws_vpc_endpoint.events",
            "module.network.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.network.module.vpc.aws_vpc_endpoint.glue",
            "module.network.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.network.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.network.module.vpc.aws_vpc_endpoint.kms",
            "module.network.module.vpc.aws_vpc_endpoint.lambda",
            "module.network.module.vpc.aws_vpc_endpoint.logs",
            "module.network.module.vpc.aws_vpc_endpoint.monitoring",
            "module.network.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.network.module.vpc.aws_vpc_endpoint.rds",
            "module.network.module.vpc.aws_vpc_endpoint.rekognition",
            "module.network.module.vpc.aws_vpc_endpoint.s3",
            "module.network.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.network.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.network.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.network.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.network.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.network.module.vpc.aws_vpc_endpoint.ses",
            "module.network.module.vpc.aws_vpc_endpoint.sms",
            "module.network.module.vpc.aws_vpc_endpoint.sns",
            "module.network.module.vpc.aws_vpc_endpoint.sqs",
            "module.network.module.vpc.aws_vpc_endpoint.ssm",
            "module.network.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.network.module.vpc.aws_vpc_endpoint.states",
            "module.network.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.network.module.vpc.aws_vpc_endpoint.sts",
            "module.network.module.vpc.aws_vpc_endpoint.textract",
            "module.network.module.vpc.aws_vpc_endpoint.transfer",
            "module.network.module.vpc.aws_vpc_endpoint.transferserver",
            "module.network.module.vpc.aws_vpc_endpoint.workspaces",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.network.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.network.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.network.module.websvr_sg.aws_security_group.security_group",
            "module.webserver.module.alb.aws_lb.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver.module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.webserver.module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}